--- a/src/app/index.css
+++ b/src/app/index.css
@@ -7,44 +7,61 @@
  */
 
 p {
-  line-height: 2rem;
+    line-height: 2rem;
 }
 
 .button-collapse {
-  color: #26a69a;
+    color: #26a69a;
 }
 
 .parallax-container {
-  min-height: 380px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
+    min-height: 380px;
+    line-height: 0;
+    height: auto;
+    color: rgba(255, 255, 255, .9);
 }
-  .parallax-container .section {
+
+.parallax-container .section {
     width: 100%;
-  }
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
 }
 
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
+@media only screen and (max-width: 992px) {
+    .parallax-container .section {
+        position: absolute;
+        top: 40%;
+    }
+
+    #index-banner .section {
+        top: 10%;
+    }
 }
 
+@media only screen and (max-width: 600px) {
+    #index-banner .section {
+        top: 0;
+    }
+}
 
 .icon-block {
-  padding: 0 15px;
+    padding: 0 15px;
 }
 
 footer.page-footer {
-  margin: 0;
+    margin: 0;
+}
+
+.hero {
+    background-image: url("../assets/images/background1.jpg");
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    margin-top: -65px;
+    padding-top: 10%;
+    min-height: 100%;
+    height: 100%;
+    padding-bottom: 5% !important;
+}
+
+.hero h1.title {
+    text-transform: uppercase;
 }
