--- a/src/app/components/headerMenu/headerMenu.html
+++ b/src/app/components/headerMenu/headerMenu.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="nav-wrapper">
 
-            <a href="#/" class="brand-logo"><img src="assets/images/logo-mini.png"/></a>
+            <a href="#/" class="brand-logo"><img src="assets/images/logo-mini.png" height="30px"/></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="https://twitter.com/Qaobee"
                        target="_blank"
@@ -19,8 +19,8 @@
                     class="mdi-navigation-menu"></i></a>
 
             <ul id="nav-mobileHC" class="side-nav">
-                <li><a href="#modalLogin" class="grey-text text-lighten-1 modal-trigger"><i
-                        class="fa fa-sign-in left"></i>{{'navbar.connect' | translate}}</a></li>
+                <li><a href="#modalLogin" class="grey-text text-lighten-1 modal-trigger"><span
+                        class="fa fa-sign-in"></span> {{'navbar.connect' | translate}}</a></li>
             </ul>
 
         </div>
