--- a/src/app/public/home.html
+++ b/src/app/public/home.html
@@ -1,21 +1,22 @@
-<div id="index-banner" >
+<div id="index-banner">
     <div class="section no-pad-bot hero">
+        <div class="hero-overlay"></div>
         <div class="container">
-            <div class="valign-wrapper">
-                <div class="valign center-align " style="width: 100%;">
-                    <h1 class="header center orange-text text-accent-2 title" translate="landing.main-title"></h1>
 
-                        <h5 class="header col s12 white-text light" translate="landing.sub-title" style="margin-bottom: 50px"></h5>
-                    <div class="row">
-                        <span class="col m2">&nbsp;</span>
-                        <img class="col m3 center-align" src="assets/images/appstore.png" alt="AppStore" />
-                        <span class="col m2">&nbsp;</span>
-                        <img class="col m3 center-align" src="assets/images/googleplay.png" alt="Googleplay" />
-                        <span class="col m2">&nbsp;</span>
-                        </div>
-            <p>Prochainement disponible</p>
+            <div class="center-align">
+                <h1 class="header center orange-text text-accent-2 title" translate="landing.main-title"></h1>
 
-                </div>
+                <h4 class="header col s12 white-text light" translate="landing.sub-title"
+                    style="margin-bottom: 50px"></h4>
+                <!-- <div class="row">
+                     <span class="col m2">&nbsp;</span>
+                     <img class="col m3 center-align" src="assets/images/appstore.png" alt="AppStore" />
+                     <span class="col m2">&nbsp;</span>
+                     <img class="col m3 center-align" src="assets/images/googleplay.png" alt="Googleplay" />
+                     <span class="col m2">&nbsp;</span>
+                     </div>
+         <p>Prochainement disponible</p>-->
+
             </div>
         </div>
     </div>
@@ -52,17 +53,42 @@
     </div>
 
 
-    <div class="parallax-container">
-        <div class="section no-pad-bot">
-            <div class="container">
-                <div class="row center">
-                    <h5 class="header col s12 white-text light">Qaobee crée des solutions innovantes de collecte et
-                        d'analyse de données sportives en temps réel pour accompagner l'amélioration de la
-                        performance</h5>
+    <div class="section no-pad-bot">
+        <div class="container">
+            <div class="row center">
+                <div class="col s12 m4 center-align">
+                    <div class="col m2">&nbsp</div>
+                    <img src="assets/images/landing-demo-01.jpg" alt=""
+                         class="circle responsive-img col m8 center-align scrollfire-hidden" id="landing-demo-01"/>
+
+                    <div class="col m2">&nbsp</div>
+                    <h5>Collectez des informations d'une précision incroyable</h5>
+
+                    <p style="text-align: justify">Téléchargez l'application sur votre smartphone ou votre tablette,
+                        définissez vos indicateurs et receuillez vos observations en toute simplicité</p>
+                </div>
+                <div class="col s12 m4 center-align">
+                    <div class="col m2">&nbsp</div>
+                    <img src="assets/images/landing-demo-02.jpg" alt=""
+                         class="circle responsive-img col m8 center-align scrollfire-hidden" id="landing-demo-02"/>
+
+                    <div class="col m2">&nbsp</div>
+                    <h5>Retrouvez et analysez vos données</h5>
+
+                    <p style="text-align: justify">Connectez vous à votre espace de travail et ...</p>
+                </div>
+                <div class="col s12 m4 center-align">
+                    <div class="col m2">&nbsp</div>
+                    <img src="assets/images/landing-demo-03.jpg" alt=""
+                         class="circle responsive-img col m8 center-align scrollfire-hidden" id="landing-demo-03"/>
+
+                    <div class="col m2">&nbsp</div>
+                    <h5>Optimisez vos performances</h5>
+
+                    <p style="text-align: justify">Lorem ipsum sidi dolor amet.</p>
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="assets/images/background3.jpg" alt="Unsplashed background img 2"></div>
     </div>
 
     <div class="container">
@@ -134,5 +160,4 @@
             </div>
         </form>
     </div>
-
-
+</div>
