--- a/src/app/index.css
+++ b/src/app/index.css
@@ -40,6 +40,12 @@ p {
     #index-banner .section {
         top: 0;
     }
+    .hero h1.title {
+        font-size: 2.5em;
+    }
+    .hero-overlay + .container {
+        padding: 0;
+    }
 }
 
 .icon-block {
@@ -51,17 +57,43 @@ footer.page-footer {
 }
 
 .hero {
-    background-image: url("../assets/images/background1.jpg");
-    background-position: center center;
+    background: url("../assets/images/background1.jpg") center center;
     background-size: cover;
     width: 100%;
     margin-top: -65px;
     padding-top: 10%;
-    min-height: 100%;
+    min-height: calc(100vh - 194px);
     height: 100%;
-    padding-bottom: 5% !important;
+}
+.hero-overlay {
+    background-color: #000000;
+    width: 100%;
+    min-height: calc(100vh - 194px);
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    opacity: 0.5;
+}
+.hero-overlay + .container {
+    position: relative;
+    z-index: 10;
+    padding: 0;
 }
 
 .hero h1.title {
     text-transform: uppercase;
+    font-weight: bold;
+}
+.top-nav {
+    position: relative;
+    z-index: 30;
+    background-color: transparent !important;
+    box-shadow: none;
+}
+#sidenav-overlay {
+    z-index: 20;
+}
+
+.scrollfire-hidden {
+    opacity: 0;
 }
