Implémentation du login

--- a/src/app/components/headerMenu/headerMenu.html
+++ b/src/app/components/headerMenu/headerMenu.html
@@ -10,11 +10,11 @@
                        class="white-text"><i
                         class="fa fa-twitter-square fa-2x"></i></a></li>
             </ul>
-         <!--   <ul class="right hide-on-med-and-down">
+            <ul class="right hide-on-med-and-down">
                 <li><a href="#modalLogin" class="grey-text text-lighten-1 modal-trigger"><i
                         class="fa fa-sign-in right"></i>{{'navbar.connect' | translate}}</a></li>
             </ul>
--->
+
             <a href="#" data-activates="nav-mobileHC" class="button-collapse grey-text text-lighten-1"><i
                     class="mdi-navigation-menu"></i></a>
 
@@ -29,7 +29,7 @@
 
 <!-- Connected Fisrt header-->
 <div class="navbar-fixed" ng-show="user">
-    <nav class="top-nav light-green lighten-1" role="navigation">
+    <nav class="top-nav light-green lighten-1 visible-nav" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
 
@@ -88,7 +88,7 @@
 </div>
 <div ng-show="user">
     <!-- Connected second header-->
-    <nav class="green darken-1 hide-on-med-and-down" role="navigation">
+    <nav class="green darken-1 hide-on-med-and-down visible-nav" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
                 <ul>
