--- a/src/app/prive/home.html
+++ b/src/app/prive/home.html
@@ -13,7 +13,7 @@
         <div>
             <div class="card small white">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="img/ACT-HAND-EVENT.jpg">
+                    <img class="activator" src="assets/images/ACT-HAND-EVENT.jpg">
                     <span class="card-title white-text flow-text">CRMHB Rennes - USDK Dunkerque</span>
                 </div>
                 <div class="card-content">
@@ -37,7 +37,7 @@
         <div>
             <div class="card small">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="img/ACT-HAND-STAT.jpg">
+                    <img class="activator" src="assets/images/ACT-HAND-STAT.jpg">
                     <span class="card-title white-text flow-text">CRMHB Rennes - USDK Dunkerque, le 15/04/2015</span>
                 </div>
                 <div class="card-content">
