--- a/src/app/components/headerMenu/headerMenu.html
+++ b/src/app/components/headerMenu/headerMenu.html
@@ -1,5 +1,5 @@
 <!-- Not connected -->
-<nav class="top-nav white" role="navigation" ng-hide="user">
+<nav class="top-nav white top-nav-trans" role="navigation" ng-hide="user" >
     <div class="container">
         <div class="nav-wrapper">
 
@@ -11,7 +11,7 @@
                         class="fa fa-twitter-square fa-2x"></i></a></li>
             </ul>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#modalLogin" class="grey-text text-lighten-1 modal-trigger"><i
+                <li><a href="#modalLogin" class="white-text modal-trigger"><i
                         class="fa fa-sign-in right"></i>{{'navbar.connect' | translate}}</a></li>
             </ul>
 
