--- a/src/app/public/home.html
+++ b/src/app/public/home.html
@@ -4,22 +4,16 @@
         <div class="container">
 
             <div class="center-align">
-                <h1 class="header center orange-text text-accent-2 title" translate="landing.main-title"></h1>
+                <h1 class="header center white-text text-accent-2 title" translate="landing.main-title"></h1>
 
-                <h4 class="header col s12 white-text light" translate="landing.sub-title"
+                <h4 class="col s12 white-text title" translate="landing.sub-title"
                     style="margin-bottom: 50px"></h4>
-                <!-- <div class="row">
-                     <span class="col m2">&nbsp;</span>
-                     <img class="col m3 center-align" src="assets/images/appstore.png" alt="AppStore" />
-                     <span class="col m2">&nbsp;</span>
-                     <img class="col m3 center-align" src="assets/images/googleplay.png" alt="Googleplay" />
-                     <span class="col m2">&nbsp;</span>
-                     </div>
-         <p>Prochainement disponible</p>-->
 
+                <a class="waves-effect waves-light btn" translate="landing.manual-btn" href="#/how"></a>
             </div>
         </div>
     </div>
+
 
     <div class="container">
         <div class="section">
@@ -52,75 +46,85 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="section">
+            <h4 class="center-align" translate="landing.area-2.title"></h4>
 
-    <div class="section no-pad-bot">
-        <div class="container">
-            <div class="row center">
-                <div class="col s12 m4 center-align">
-                    <div class="col m2">&nbsp</div>
-                    <img src="assets/images/landing-demo-01.jpg" alt=""
-                         class="circle responsive-img col m8 center-align scrollfire-hidden" id="landing-demo-01"/>
-
-                    <div class="col m2">&nbsp</div>
-                    <h5>Collectez des informations d'une précision incroyable</h5>
-
-                    <p style="text-align: justify">Téléchargez l'application sur votre smartphone ou votre tablette,
-                        définissez vos indicateurs et receuillez vos observations en toute simplicité</p>
-                </div>
-                <div class="col s12 m4 center-align">
-                    <div class="col m2">&nbsp</div>
-                    <img src="assets/images/landing-demo-02.jpg" alt=""
-                         class="circle responsive-img col m8 center-align scrollfire-hidden" id="landing-demo-02"/>
-
-                    <div class="col m2">&nbsp</div>
-                    <h5>Retrouvez et analysez vos données</h5>
-
-                    <p style="text-align: justify">Connectez vous à votre espace de travail et ...</p>
-                </div>
-                <div class="col s12 m4 center-align">
-                    <div class="col m2">&nbsp</div>
-                    <img src="assets/images/landing-demo-03.jpg" alt=""
-                         class="circle responsive-img col m8 center-align scrollfire-hidden" id="landing-demo-03"/>
-
-                    <div class="col m2">&nbsp</div>
-                    <h5>Optimisez vos performances</h5>
-
-                    <p style="text-align: justify">Lorem ipsum sidi dolor amet.</p>
-                </div>
-            </div>
+            <p class="center-align" translate="landing.area-2.content"></p>
         </div>
     </div>
 
     <div class="container">
         <div class="section">
             <div class="row">
-                <div class="col s12 center">
+                <div class="col s6 m3">
+                    <div class="center">
+                        <div class="btn-floating btn-large blue lighten-2">
+                            <i class="fa fa-cloud-download fa-3x"></i>
+                        </div>
 
-                    <p class="left-align light">
-                        <b>Qaobee</b> is a software company that develops and publishes digital solutions for the
-                        sporting community. We are a band of bretons who value sports, new technologies, innovation,
-                        teamwork and building things we can be proud of. During the week we come together to create
-                        innovative solutions to simplify and optimize the sports managers activity.</p>
+                        <h6 translate="landing.area-3.item-0.title"></h6>
+
+                        <p class="light justify small" translate="landing.area-3.item-0.content"></p>
+                    </div>
+                </div>
+
+                <div class="col s6 m3">
+                    <div class="center">
+                        <div class="btn-floating btn-large blue lighten-2">
+                            <i class="fa fa-cogs fa-3x"></i>
+                        </div>
+                        <h6 translate="landing.area-3.item-1.title"></h6>
+
+                        <p class="light justify small" translate="landing.area-3.item-1.content"></p>
+                    </div>
+                </div>
+
+                <div class="col s6 m3">
+                    <div class="center">
+                        <div class="btn-floating btn-large blue lighten-2">
+                            <i class="fa fa-bar-chart circle fa-3x"></i>
+                        </div>
+                        <h6 translate="landing.area-3.item-2.title"></h6>
+
+                        <p class="light justify small" translate="landing.area-3.item-2.content"></p>
+                    </div>
+                </div>
+
+                <div class="col s6 m3">
+                    <div class="center">
+                        <div class="btn-floating btn-large blue lighten-2">
+                            <i class="fa fa-rocket fa-3x"></i>
+                        </div>
+                        <h6 translate="landing.area-3.item-3.title"></h6>
+
+                        <p class="light justify small" translate="landing.area-3.item-3.content"></p>
+                    </div>
                 </div>
             </div>
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="section">
+            <div class="divider"/>
         </div>
     </div>
 
+    <div class="container">
+        <div class="section">
+            <h4 class="center-align" translate="landing.area-4.title"></h4>
 
-    <div class="parallax-container">
-        <div class="section no-pad-bot">
-            <div class="container">
-                <div class="row center">
-                    <h5 class="header col s12 white-text light">Qaobee crée des solutions innovantes de collecte et
-                        d'analyse de données sportives en temps réel pour accompagner l'amélioration de la
-                        performance</h5>
-                </div>
+            <p class="center-align" translate="landing.area-4.content"></p>
+
+            <div class="row">
+                <img class="col offset-m2 m3 center-align" src="assets/images/appstore.png" alt="AppStore"/>
+                <span class="col m2">&nbsp;</span>
+                <img class="col m3 center-align"  src="assets/images/googleplay.png" alt="Googleplay"/>
+                <span class="col m2">&nbsp;</span>
             </div>
         </div>
-        <div class="parallax"><img src="assets/images/background2.jpg" alt="Unsplashed background img 3"></div>
     </div>
-
-
     <!-- Modal -->
     <div id="modalSubMailingList" class="modal">
         <div class="modal-header center-align ">
