--- a/src/app/index.css
+++ b/src/app/index.css
@@ -128,4 +128,15 @@ footer.page-footer {
 .how {
     background-color: #B4C8BD;
     color: #fff;
+    max-width: 100%;
+    margin-top: -300px !important;
+    padding-top: 300px;
+    width: 100%;
+}
+.how .container {
+    width: 90%;
+}
+.pad-10 {
+    padding-left: 50px !important;
+    padding-right: 50px !important;
 }
