--- a/src/app/public/how.html
+++ b/src/app/public/how.html
@@ -1,36 +1,51 @@
-<div class="container how">
-    <div class="row">
-        <div class="col s12 m4">
-            <div class="center">
-                <img src="assets/images/landing-demo-01.jpg" alt=""
-                     class="responsive-img center"/>
+<div class="how">
+    <div class="container">
+        <h1 class="center"><i class="fa fa-lightbulb-o"></i>
+            How it works</h1>
 
-                <h5>Collectez des informations d'une précision incroyable</h5>
+        <div class="row">
+            <div class="col s12 m4 pad-10">
+                <div class="center">
+                    <div style="background: url('../assets/images/landing-demo-01.jpg') center center;background-size: cover; height: 250px"></div>
 
-                <p class="justify">Téléchargez l'application sur votre smartphone ou votre tablette,
-                    définissez vos indicateurs et receuillez vos observations en toute simplicité</p>
+                    <h5>Collectez des informations d'une précision incroyable</h5>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="center">
+                    <div style="background: url('../assets/images/landing-demo-02.jpg') center center;background-size: cover; height: 250px"></div>
+
+                    <h5>Retrouvez et analysez vos données</h5>
+                </div>
+            </div>
+
+            <div class="col s12 m4 pad-10">
+                <div class="center">
+                    <div style="background: url('../assets/images/landing-demo-03.jpg') center center;background-size: cover; height: 250px"></div>
+
+                    <h5>Optimisez vos performances</h5>
+                </div>
             </div>
         </div>
-
-        <div class="col s12 m4">
-            <div class="center">
-                <img src="assets/images/landing-demo-02.jpg" alt=""
-                     class="responsive-img center"/>
-
-                <h5>Retrouvez et analysez vos données</h5>
-
-                <p class="justify">Connectez vous à votre espace de travail et ...</p>
+        <div class="row">
+            <div class="col s12 m4 pad-10">
+                <div class="center">
+                    <p class="justify">Téléchargez l'application sur votre smartphone ou votre tablette,
+                        définissez vos indicateurs et receuillez vos observations en toute simplicité</p>
+                </div>
             </div>
-        </div>
 
-        <div class="col s12 m4">
-            <div class="center">
-                <img src="assets/images/landing-demo-03.jpg" alt=""
-                     class="responsive-img center"/>
+            <div class="col s12 m4 pad-10">
+                <div class="center">
+                    <p class="justify">Connectez vous à votre espace de travail et ...</p>
+                </div>
+            </div>
 
-                <h5>Optimisez vos performances</h5>
-
-                <p class="justify">Lorem ipsum sidi dolor amet.</p>
+            <div class="col s12 m4 pad-10">
+                <div class="center">
+                    <p class="justify">Lorem ipsum sidi dolor amet.</p>
+                </div>
             </div>
         </div>
     </div>
