--- a/src/app/public/home.html
+++ b/src/app/public/home.html
@@ -55,54 +55,51 @@
     </div>
 
     <div class="container">
-        <div class="section">
-            <div class="row">
-                <div class="col s6 m3">
-                    <div class="center">
-                        <div class="btn-floating btn-large blue lighten-2">
-                            <i class="fa fa-cloud-download fa-3x"></i>
-                        </div>
-
-                        <h6 translate="landing.area-3.item-0.title"></h6>
-
-                        <p class="light justify small" translate="landing.area-3.item-0.content"></p>
+        <div class="section row describe">
+            <div class="col s12 m6 l3">
+                <div class="center">
+                    <div class="btn-floating btn-large blue lighten-2">
+                        <i class="fa fa-cloud-download fa-3x"></i>
                     </div>
-                </div>
 
-                <div class="col s6 m3">
-                    <div class="center">
-                        <div class="btn-floating btn-large blue lighten-2">
-                            <i class="fa fa-cogs fa-3x"></i>
-                        </div>
-                        <h6 translate="landing.area-3.item-1.title"></h6>
+                    <h6 translate="landing.area-3.item-0.title"></h6>
 
-                        <p class="light justify small" translate="landing.area-3.item-1.content"></p>
-                    </div>
-                </div>
-
-                <div class="col s6 m3">
-                    <div class="center">
-                        <div class="btn-floating btn-large blue lighten-2">
-                            <i class="fa fa-bar-chart circle fa-3x"></i>
-                        </div>
-                        <h6 translate="landing.area-3.item-2.title"></h6>
-
-                        <p class="light justify small" translate="landing.area-3.item-2.content"></p>
-                    </div>
-                </div>
-
-                <div class="col s6 m3">
-                    <div class="center">
-                        <div class="btn-floating btn-large blue lighten-2">
-                            <i class="fa fa-rocket fa-3x"></i>
-                        </div>
-                        <h6 translate="landing.area-3.item-3.title"></h6>
-
-                        <p class="light justify small" translate="landing.area-3.item-3.content"></p>
-                    </div>
+                    <p class="light justify small" translate="landing.area-3.item-0.content"></p>
                 </div>
             </div>
 
+            <div class="col s12 m6 l3">
+                <div class="center">
+                    <div class="btn-floating btn-large blue lighten-2">
+                        <i class="fa fa-cogs fa-3x"></i>
+                    </div>
+                    <h6 translate="landing.area-3.item-1.title"></h6>
+
+                    <p class="light justify small" translate="landing.area-3.item-1.content"></p>
+                </div>
+            </div>
+<div class="s12">&nbsp;</div>
+            <div class="col s12 m6 l3">
+                <div class="center">
+                    <div class="btn-floating btn-large blue lighten-2">
+                        <i class="fa fa-bar-chart circle fa-3x"></i>
+                    </div>
+                    <h6 translate="landing.area-3.item-2.title"></h6>
+
+                    <p class="light justify small" translate="landing.area-3.item-2.content"></p>
+                </div>
+            </div>
+
+            <div class="col s12 m6 l3">
+                <div class="center">
+                    <div class="btn-floating btn-large blue lighten-2">
+                        <i class="fa fa-rocket fa-3x"></i>
+                    </div>
+                    <h6 translate="landing.area-3.item-3.title"></h6>
+
+                    <p class="light justify small" translate="landing.area-3.item-3.content"></p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container">
@@ -118,10 +115,11 @@
             <p class="center-align" translate="landing.area-4.content"></p>
 
             <div class="row">
-                <img class="col offset-m2 m3 center-align" src="assets/images/appstore.png" alt="AppStore"/>
-                <span class="col m2">&nbsp;</span>
-                <img class="col m3 center-align"  src="assets/images/googleplay.png" alt="Googleplay"/>
-                <span class="col m2">&nbsp;</span>
+                <span class="col m2 hide-on-small-only">&nbsp;</span>
+                <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
+                <span class="col m2 hide-on-small-only">&nbsp;</span>
+                <img class="col m3 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+                <span class="col m2 hide-on-small-only">&nbsp;</span>
             </div>
         </div>
     </div>
